ES update for log4j2