@@ -1,57 +1,83 @@
-#FROM docker.elastic.co/elasticsearch/elasticsearch:6.6.0@sha256:e9cba8dec2df88a1af911787f05cf5200a5d9d64e4517f64deb8bafc6e96176f
-FROM openjdk:8u191-jre-alpine3.9
-EXPOSE 9200 9300
-#ENV PATH $PATH:/usr/share/elasticsearch/bin:
-# Export HTTP & Transport
-EXPOSE 9200 9300
-# set argmunt for this
-ENV ES_VERSION 7.10.0
-# https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-repositories.html
-# https://www.elastic.co/guide/en/elasticsearch/reference/5.0/deb.html
+FROM eclipse-temurin:11.0.12_7-jdk  as jre-build
+#FROM eclipse-temurin:11.0.13_8-jre as jre-build
+#FROM eclipse-temurin:8u312-b07-jre as jre-build
+ENV JAVA_HOME /opt/java/openjdk
+# Create a custom Java runtime
+#RUN $JAVA_HOME/bin/jlink \
+#         --add-modules java.base \
+#         --strip-debug \
+#         --no-man-pages \
+#         --no-header-files \
+#         --compress=2 \
+#         --output /javaruntime
 
-ENV DOWNLOAD_URL "https://artifacts.elastic.co/downloads/elasticsearch"
-ENV ES_TARBAL "${DOWNLOAD_URL}/elasticsearch-${ES_VERSION}-linux-x86_64.tar.gz"
-ENV ES_TARBALL_ASC "${DOWNLOAD_URL}/elasticsearch-${ES_VERSION}-linux-x86_64.tar.gz.asc"
-ENV GPG_KEY "46095ACC8548582C1A2699A9D27D666CD88E42B4"
+# Define your base image
+FROM debian:buster-slim
+ENV JAVA_HOME /opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+#COPY --from=jre-build /javaruntime $JAVA_HOME
+COPY --from=jre-build $JAVA_HOME $JAVA_HOME
+
+
+EXPOSE 9200 9300
+#https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.16.2-linux-x86_64.tar.gz
+ENV ES_VERSION 7.16.2
+ENV DOWNLOAD_URL https://artifacts.elastic.co/downloads/elasticsearch/
+ENV ES_TARBAL ${DOWNLOAD_URL}elasticsearch-${ES_VERSION}-linux-x86_64.tar.gz
+ENV SHA ${ES_TARBAL}.sha512
+RUN echo $SHA
+ 
 # Install Elasticsearch.
-RUN apk add --no-cache --update bash ca-certificates su-exec util-linux curl
-RUN apk add --no-cache -t .build-deps gnupg openssl \
-  && cd /tmp \
-  && echo "===> Install Elasticsearch..." \
-  && curl -o elasticsearch.tar.gz -Lskj "$ES_TARBAL"; \
-	if [ "$ES_TARBALL_ASC" ]; then \
-		curl -o elasticsearch.tar.gz.asc -Lskj "$ES_TARBALL_ASC"; \
-		export GNUPGHOME="$(mktemp -d)"; \
-		gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$GPG_KEY"; \
-		gpg --batch --verify elasticsearch.tar.gz.asc elasticsearch.tar.gz; \
-		rm -r "$GNUPGHOME" elasticsearch.tar.gz.asc; \
-	fi; \
-  tar -xf elasticsearch.tar.gz \
-  && ls -lah \
-  && mv elasticsearch-$ES_VERSION /elasticsearch \
-  && adduser -DH -s /sbin/nologin elasticsearch \
-  && mkdir -p /elasticsearch/config/scripts /elasticsearch/plugins \
-  && chown -R elasticsearch:elasticsearch /elasticsearch \
-  && rm -rf /tmp/* \
-  && apk del --purge .build-deps
+RUN apt-get update && apt-get install --no-install-recommends -y libdigest-sha-perl wget curl ca-certificates util-linux gnupg openssl uuid-runtime &&\
+  set -ex; \
+     \
+     curl -o /usr/local/bin/su-exec.c https://raw.githubusercontent.com/ncopa/su-exec/master/su-exec.c; \
+     \
+     fetch_deps='gcc libc-dev'; \
+     apt-get update; \
+     apt-get install -y --no-install-recommends $fetch_deps; \
+     rm -rf /var/lib/apt/lists/*; \
+     gcc -Wall \
+         /usr/local/bin/su-exec.c -o/usr/local/bin/su-exec; \
+     chown root:root /usr/local/bin/su-exec; \
+     chmod 0755 /usr/local/bin/su-exec; \
+     rm /usr/local/bin/su-exec.c; \
+     \
+     apt-get purge -y --auto-remove $fetch_deps 
+
+RUN cd /tmp &&\
+  wget -q ${ES_TARBAL} &&\
+  wget -q ${SHA} &&\
+  shasum -a 512 -c elasticsearch-${ES_VERSION}-linux-x86_64.tar.gz.sha512 &&\
+  echo "===> Install Elasticsearch..." && ls -ltrha &&\
+  tar -xf elasticsearch-$ES_VERSION-linux-x86_64.tar.gz &&\
+  mv /tmp/elasticsearch-$ES_VERSION /elasticsearch &&  rm -rf /tmp/elas*
+
+
+RUN useradd elasticsearch --no-create-home -G 0 -d /elasticsearch -r -U \
+  && mkdir -p /elasticsearch/config/scripts /elasticsearch/plugins /data \
+  && chown -R elasticsearch:elasticsearch /elasticsearch /data 
+
+RUN ls -ltrha /opt/java/* && echo $PATH ;echo $JAVA_HOME && java -version
 
 ENV PATH /elasticsearch/bin:$PATH
-
+ENV env int
 WORKDIR /elasticsearch
 
 # Copy configuration
 COPY config /elasticsearch/config
-
+# use es6 config remove on 7
+#RUN mv config/elasticsearch6.yml config/elasticsearch.yml
 # Copy run script
 COPY run.sh /
 
 # Set environment variables defaults
 ENV ES_JAVA_OPTS "-Xms512m -Xmx512m"
-ENV CLUSTER_NAME elasticsearch-default
+ENV CLUSTER_NAME es-hetarchief
 ENV NODE_MASTER true
 ENV NODE_DATA true
 ENV NODE_INGEST true
-#ENV HTTP_ENABLE true
+ENV HTTP_ENABLE true
 ENV NETWORK_HOST _site_
 ENV HTTP_CORS_ENABLE true
 ENV HTTP_CORS_ALLOW_ORIGIN *
@@ -61,15 +87,18 @@ ENV SHARD_ALLOCATION_AWARENESS ""
 ENV SHARD_ALLOCATION_AWARENESS_ATTR ""
 ENV MEMORY_LOCK true
 ENV REPO_LOCATIONS ""
-
+ENV DISCOVERY_SERVICE "localhost"
+ENV env prd
 # Volume for Elasticsearch data
 VOLUME ["/data"]
 # Override config, otherwise plug-in install will fail
 ADD config /elasticsearch/config
+RUN mv config/elasticsearch6.yml config/elasticsearch.yml
 
 # Set environment
-ENV DISCOVERY_SERVICE es-discover-tst
+ENV DISCOVERY_SERVICE elasticsearch-discovery
 
 # Kubernetes requires swap is turned off, so memory lock is redundant
 ENV MEMORY_LOCK false
-CMD ["/run.sh"]
+USER elasticsearch
+CMD ["/bin/bash", "/run.sh"]
